[package]
name = "servo-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-pca9685 = "0.3.1"
linux-embedded-hal = "0.3.2"
tokio = { version = "1.15.0", features = ["full"] }
r2r = "0.6.0"
futures = "0.3.19"
chrono = "0.4"
